err/mo-collections.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/mo_collections'...
Compiling './lib/python3.5/site-packages/mo_collections/matrix.py'...
***   File "./lib/python3.5/site-packages/mo_collections/matrix.py", line 396
    exec code
            ^
SyntaxError: Missing parentheses in call to 'exec'

Listing './lib/python3.5/site-packages/mo_collections-1.2.17235.egg-info'...
Listing './lib/python3.5/site-packages/mo_dots'...
Listing './lib/python3.5/site-packages/mo_dots-1.7.17339.egg-info'...
Listing './lib/python3.5/site-packages/mo_future'...
Listing './lib/python3.5/site-packages/mo_future-1.1.17339.egg-info'...
Listing './lib/python3.5/site-packages/mo_kwargs'...
Listing './lib/python3.5/site-packages/mo_kwargs-1.0.17227.egg-info'...
Listing './lib/python3.5/site-packages/mo_logs'...
Compiling './lib/python3.5/site-packages/mo_logs/log_usingThreadedStream.py'...
***   File "./lib/python3.5/site-packages/mo_logs/log_usingThreadedStream.py", line 80
    except Exception, f:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/mo_logs-1.7.18011.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/tests'...
Compiling './lib/python3.5/site-packages/tests/__init__.py'...
Listing './share'...
Listing './share/python-wheels'...
